# ai-werewolf-cc-discord

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
.SourceSageAssets/: Repository_summary.md
agents/: CLAUDE.md
agents/agent_1/: .env.example  CLAUDE.md
agents/agent_1/.claude/: CLAUDE.md
agents/agent_2/: .env.example  CLAUDE.md
agents/agent_2/.claude/: CLAUDE.md
agents/agent_3/: .env.example  CLAUDE.md
agents/agent_3/.claude/: CLAUDE.md  settings.json
agents/agent_4/: .env.example  CLAUDE.md
agents/agent_4/.claude/: CLAUDE.md
agents/agent_5/: .env.example  CLAUDE.md
agents/agent_5/.claude/: CLAUDE.md
agents/agent_6/: .env.example  CLAUDE.md
agents/agent_6/.claude/: CLAUDE.md
docs/: AGENT_ICONS.md  BOT_SETUP.md  GAME_FLOW.md
hooks/: keep_going.py
src/cli/: main.py
src/gm/: channel_manager.py  game_state.py  main.py  role_manager.py
src/setup/: create_server.py
src/utils/: discord_utils.py
tests/: README.md  check_all_roles.sh  interactive.sh  run_all_tests.sh  setup_agents.sh  test_knight.sh  test_random_elimination.sh  test_role_assignment.sh  test_seer.sh  test_voting.sh  test_werewolf.sh
